# py-pkg-boilerplate

./: .bandit.yml  .env  .gitignore  .pre-commit-config.yaml  .prospector.yml  Dockerfile  README.md  pyproject.toml
package_name/core/: __init__.py  config.py
scripts/: poetry-install.sh
tests/: test_goose.py
tests/core/: test_settings.py
