[tool.poetry]
name = "boilerplate"
version = "0.1.0"
description = "boilerplate for python package"
authors = ["Henri Aïdasso <henri.aidasso@energiency.com>"]

[tool.poetry.dependencies]
python = "^3.8"
prospector = {extras = ["with_everything"], version = "^1.5.1"}
pre-commit = "^2.15.0"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
